--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/styles.css">
     <script defer src="js/js.js" ></script>
 </head>
-<body>
+<header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Etusivu</a>
@@ -41,10 +41,18 @@
           </div>
         </div>
       </nav>
-      <footer>
-          <p>Marko Vuorenmaa 2022</p>
-      </footer>
+</header>      
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-12"></div>
+        </div>
+    </div>
+</body>      
+    <footer>
+      <p>Marko Vuorenmaa 2022</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
+
 </html>
