sivujen pohjat tehty

--- a/index.html
+++ b/index.html
@@ -45,11 +45,9 @@
       </nav>
 </header>      
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-12"></div>
-        </div>
-    </div>
+    <div class="hero-image">
+       <div class="hero-text">
+           <h1>CLASH OF CLAN</h1></div></div>
 </body>      
     <footer>
       <p>Marko Vuorenmaa 2022</p>
