--- a/pages/pelinTarkoitus.html
+++ b/pages/pelinTarkoitus.html
@@ -22,21 +22,21 @@
                 <a class="nav-link active" aria-current="page" href="../index.html">Etusivu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/pelinTarkoitus.html">Pelin tarkoitus</a>
+                <a class="nav-link" href="../pages/pelinTarkoitus.html">Pelin tarkoitus</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Kuvagalleria
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="pages/kuvagalleriaTh14.html">Th14</a></li>
-                  <li><a class="dropdown-item" href="pages/kuvagalleriaTh13.html">Th13</a></li>
-                  <li><a class="dropdown-item" href="pages/kuvagalleriaTh12.html">Th12</a></li>
-                  <li><a class="dropdown-item" href="pages/kuvagalleriaTh11.html">Th11</a></li>
+                  <li><a class="dropdown-item" href="../pages/kuvagalleriaTh14.html">Th14</a></li>
+                  <li><a class="dropdown-item" href="../pages/kuvagalleriaTh13.html">Th13</a></li>
+                  <li><a class="dropdown-item" href="../pages/kuvagalleriaTh12.html">Th12</a></li>
+                  <li><a class="dropdown-item" href="../pages/kuvagalleriaTh11.html">Th11</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/sotastrategiat.html">sotastrategiat</a>
+                <a class="nav-link" href="../pages/sotastrategiat.html">sotastrategiat</a>
               </li>
             </ul>
             
