--- a/pages/pelinTarkoitus.html
+++ b/pages/pelinTarkoitus.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/styles.css">
     <script defer src="../js/js.js" ></script>
 </head>
+<body>
 <header>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
@@ -44,10 +45,30 @@
         </div>
       </nav>
 </header>      
-<body>
-    <div class="hero-image">
-       <div class="hero-text">
-           <h1>CLASH OF CLAN</h1></div></div>
+
+  <div class="hero-image">
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <h3 class="fw-normal"> Pelaaminen </h3>
+        <p>
+          Pelissä rakennetaan itse oma kylä käyttäen kultaa, jalokiviä, eliksiiriä ja mustaa eliksiiriä. Oman kylän puolustamiseksi voi rakentaa ansoja, muureja, puolustuslaitteita sekä klaanilinnan, jossa olevat joukot puolustavat kylääsi. Pelissä voi liittyä klaaneihin, joissa voi lahjoittaa klaanikavereille joukkoja klaanilinnaan. Klaanilaisilta saadut joukot myös puolustavat omaa kylääsi, kun sinne hyökätään. Lisäksi klaaneissa järjestetään sotia ja kilpailuja.
+Kylän laidalla on kauppias, jolta voi ostaa erilaisia taikaesineitä. Kauppias aukeaa päärakennuksen tasolla kahdeksan.
+
+        </p>
+        </div>
+        <div class="col-lg-6">
+          <h3 class="fw-normal"> Hyökkäys </h3>
+          <p>
+            Clash of Clansissa voi hyökätä muiden pelaajien kyliin onlinessa, tai pelin valmiisiin maahiskyliin. Jos pelaajalla on suojakilpi, se menettää osan suojaavasta ajastaan, kun hyökkää onlinessa. Tuhoamalla vähintään puolet vihollisen kylästä saavuttaa yhden tähden. Tuhoamalla vähintään puolet kylästä sekä päärakennuksen saa kaksi tähteä, ja tuhoamalla kylän täydellisesti saa kolmannen tähden. Lisäksi hyökkäyksen voittamisesta saa palkintopisteitä riippuen saamiesi tähtien määrästä ja vastustajan palkintopisteistä. Omaan kylään hyökänneille pelaajille voi kostaa, ellei hänellä ole kilpeä, pelaaja ole parhaillaan onlinessa tai pelaaja ole juuri toisen pelaajan hyökkäyksen kohteena. Kyliin hyökätään sotajoukoilla, joita voi kouluttaa kasarmeissa ja pimeissä kasarmeissa. Sotajoukot varastoituvat armeijaleireille ja näiden lukumäärä ja taso määrää kuinka ison armeijan pelaaja voi rakentaa. Sotureita ja niiden ominaisuuksia voi parannella laboratoriossa. Loitsuja voi luoda loitsukattilssa, ja tummia loitsuja voi luoda pimeässä loitsukattilassa.
+
+          </p>          
+        </div>
+        
+      </div>
+    </div>
+  </div>
 </body>      
     <footer>
       <p>Marko Vuorenmaa 2022</p>
