--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                 <a class="nav-link" href="pages/sotastrategiat.html">sotastrategiat</a>
               </li>
             </ul>
-            
+            <div class="spinner-border" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
           </div>
         </div>
       </nav>
