--- a/pages/pelinTarkoitus.html
+++ b/pages/pelinTarkoitus.html
@@ -40,7 +40,9 @@
                 <a class="nav-link" href="../pages/sotastrategiat.html">sotastrategiat</a>
               </li>
             </ul>
-            
+            <div class="spinner-grow" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
           </div>
         </div>
       </nav>
@@ -48,7 +50,7 @@
 
   <div class="hero-image">
 
-    <div class="container">
+    <div class="container1">
       <div class="row">
         <div class="col-lg-6">
           <h3 class="fw-normal"> Pelaaminen </h3>
