--- a/pages/kuvagalleriaTh11.html
+++ b/pages/kuvagalleriaTh11.html
@@ -46,8 +46,75 @@
 </header>      
 <body>
     <div class="hero-image">
-       <div class="hero-text">
-           <h1>CLASH OF CLAN</h1></div></div>
+      <!-- Carousel wrapper -->
+<div
+id="carouselMultiItemExample"
+class="carousel slide carousel-dark text-center"
+data-mdb-ride="carousel"
+>
+
+<!-- Inner -->
+<div class="carousel-inner py-4">
+  <!-- Single item -->
+  <div class="carousel-item active">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="card">
+            <img
+              src="../pictures/funny2.jpg"
+              class="card-img-top"
+              alt="Troll base."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Troll base</h5>
+              <p class="card-text">
+                Tässä on niin kutsuttu hauska kylä, näitä löytyy netistä tuhansia erilaisia.
+              </p>
+              <a href="../pictures/isompana.png" class="btn btn-primary">Isompana</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 d-lg-block">
+          <div class="card">
+            <img
+              src="../pictures/trophy.jpg"
+              class="card-img-top"
+              alt="ring base."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Ring base</h5>
+              <p class="card-text">
+                Tässä taas ring kylä, missä yritetään vastustajalle vain yhtä tähteä hyökkäyksessä.
+              </p>
+              <a href="../pictures/isompiring.png" class="btn btn-primary">Isompana</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 d-lg-block">
+          <div class="card">
+            <img
+              src="../pictures/war.jpg"
+              class="card-img-top"
+              alt="war base."
+            />
+            <div class="card-body">
+              <h5 class="card-title">Sota kylä</h5>
+              <p class="card-text">
+                Tämä on sotaa varten kehitetty kylä, missä tarkoituksena on ettei vastustaja saisi kolmea tähteä.
+              </p>
+              <a href="../pictures/isosota.png" class="btn btn-primary">Isompana</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>  
+            </div>
+          </div>
+        </div> 
 </body>      
     <footer>
       <p>Marko Vuorenmaa 2022</p>
