lisätty varoitus nappi ja tekijä

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <a class="nav-link" href="pages/sotastrategiat.html">sotastrategiat</a>
               </li>
             </ul>
+            <p class="navbar-text navbar-right">Tehnyt <a href="pictures/marko.jpg" class="navbar-link">Marko Vuorenmaa</a></p>
             <div class="spinner-border" role="status">
               <span class="visually-hidden">Loading...</span>
             </div>
