--- a/pages/pelinTarkoitus.html
+++ b/pages/pelinTarkoitus.html
@@ -70,6 +70,9 @@ Kylän laidalla on kauppias, jolta voi ostaa erilaisia taikaesineitä. Kauppias 
         
       </div>
     </div>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <div id="liveAlertPlaceholder"></div>
+<button type="button" class="btn btn-primary" id="liveAlertBtn">ÄLÄ PAINA</button>
   </div>
 </body>      
     <footer>
