--- a/pages/pelinTarkoitus.html
+++ b/pages/pelinTarkoitus.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/styles.css">
     <script defer src="../js/js.js" ></script>
-    <script defer src="../pages/clash-of-clan-server-application/coc.js" ></script>
+   
 </head>
 <body>
 <header>
@@ -74,14 +74,14 @@ Kylän laidalla on kauppias, jolta voi ostaa erilaisia taikaesineitä. Kauppias 
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     <div id="liveAlertPlaceholder"></div>
 <button type="button" class="btn btn-primary" id="liveAlertBtn">ÄLÄ PAINA</button>
-<button type="button" class="info-btn" id="info">Minun id</button>
+<button onclick="showPlayerInfo('#2YCUG2QL')" >Minun id</button>
   </div>
   <div id="print-here"></div>
 </body>      
     <footer>
       <p>Marko Vuorenmaa 2022</p>
     </footer>
-
+    <script src="../pages/clash-of-clan-server-application/coc.js" ></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 </html>
