--- a/pages/kuvagalleriaTh11.html
+++ b/pages/kuvagalleriaTh11.html
@@ -124,7 +124,7 @@ data-mdb-ride="carousel"
         </div> 
         
 </body>      
-    <footer>
+    <footer id="footter">
       <p>Marko Vuorenmaa 2022</p>
     </footer>
 
