--- a/pages/pelinTarkoitus.html
+++ b/pages/pelinTarkoitus.html
@@ -75,7 +75,7 @@ Kylän laidalla on kauppias, jolta voi ostaa erilaisia taikaesineitä. Kauppias 
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     <div id="liveAlertPlaceholder"></div>
 <button type="button" class="btn btn-primary" id="liveAlertBtn">ÄLÄ PAINA</button>
-<button onclick="showPlayerInfo('#2YCUG2QL')" >Minun id</button>
+<button id="id" >Minun id</button>
   </div>
   <div id="print-here"></div>
 </body>      
