--- a/pages/kuvagalleriaTh11.html
+++ b/pages/kuvagalleriaTh11.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="../styles/built-styles.css">
     <script defer src="../js/js.js" ></script>
+   
 </head>
 <header>
     <nav class="navbar navbar-expand-lg bg-light">
@@ -115,8 +116,9 @@ data-mdb-ride="carousel"
       <a href="http://www.supercell.fi" target="_blank">Supercell</a>
       <a href="https://fi.wikipedia.org/wiki/Clash_of_Clans">Clash of clan wiki</a>
       <form action="">
-        <input type="text" name="firstname" id="">
+        <input type="text" name="firstname" id="inputID">
       </form>
+      <button id="id">Minun id pelissä</button>
     </div>
   </div>  
             </div>
