--- a/pages/sotastrategiat.html
+++ b/pages/sotastrategiat.html
@@ -64,7 +64,7 @@
                   </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                  <div class="accordion-body">Tässä hyökkäyksessä käytetään palloja ja lavaa, tämä on ehkä paras strategia.</div>
                 </div>
               </div>
               <div class="accordion-item">
@@ -74,7 +74,7 @@
                   </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                  <div class="accordion-body">Tämä hyökkäys on minulle uusi, tässä on kaikki super lohikäärmeitä.</div>
                 </div>
               </div>
               <div class="accordion-item">
@@ -84,7 +84,7 @@
                   </button>
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                  <div class="accordion-body">Tätä strategiaa minä itse käytän , siinä on palloja Dragonriderseja ja loitsut cloonaa pallot.</div>
                 </div>
               </div>
               <div class="accordion-item">
@@ -94,7 +94,7 @@
                   </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                  <div class="accordion-body">Tässä on muutama Superbowlers ja jättejä tai golemeja puskuroimassa.</div>
                 </div>
               </div>
               <div class="accordion-item">
@@ -104,7 +104,7 @@
                   </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                  <div class="accordion-body">Ennen tämä oli paras strategia mutta näitä huononnettiin koska ne olivat niin hyviä, hogeja ja minereita puoliksi.</div>
                 </div>
               </div>
               <div class="accordion-item">
@@ -114,7 +114,7 @@
                   </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                  <div class="accordion-body">Tässä pekat suojaavat bowlereita, tämä on alemmilla tasoilla tosi hyvä hyökkäys.</div>
                 </div>
               </div>
             </div>
