--- a/pages/kuvagalleriaTh11.html
+++ b/pages/kuvagalleriaTh11.html
@@ -118,7 +118,8 @@ data-mdb-ride="carousel"
       <form action="">
         <input type="text" name="firstname" id="inputID">
       </form>
-      <button id="id">Minun id pelissä</button>
+      <button id="id">kuva</button>
+      <div id="print-here"></div>
     </div>
   </div>  
             </div>
