--- a/pages/sotastrategiat.html
+++ b/pages/sotastrategiat.html
@@ -127,7 +127,7 @@
     </div>
   </div>
 </body>      
-    <footer>
+    <footer id="footter">
       <p>Marko Vuorenmaa 2022</p>
     </footer>
 
