--- a/pages/kuvagalleriaTh11.html
+++ b/pages/kuvagalleriaTh11.html
@@ -118,8 +118,8 @@ data-mdb-ride="carousel"
       <form action="">
         <input type="text" name="firstname" id="inputID">
       </form>
-      <button id="id">kuva</button>
-      <div id="print-here"></div>
+      <button id="btnClick">kuva</button>
+      <img id="image">
     </div>
   </div>  
             </div>
