--- a/pages/kuvagalleriaTh11.html
+++ b/pages/kuvagalleriaTh11.html
@@ -65,7 +65,7 @@ data-mdb-ride="carousel"
         <div class="col-lg-4">
           <div class="card">
             <img
-              src="../pictures/funny2.jpg"
+              src="../pictures/kuva1.jpg"
               class="card-img-top"
               alt="Troll base."
             />
@@ -74,7 +74,7 @@ data-mdb-ride="carousel"
               <p class="card-text">
                 Tässä on niin kutsuttu hauska kylä, näitä löytyy netistä tuhansia erilaisia.
               </p>
-              <a href="../pictures/isompana.png" class="btn btn-primary">Isompana</a>
+              <a href="../pictures/kuva1.jpg" class="btn btn-primary">Isompana</a>
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@ data-mdb-ride="carousel"
         <div class="col-lg-4 d-lg-block">
           <div class="card">
             <img
-              src="../pictures/trophy.jpg"
+              src="../pictures/kuva2.jpg"
               class="card-img-top"
               alt="ring base."
             />
@@ -91,7 +91,7 @@ data-mdb-ride="carousel"
               <p class="card-text">
                 Tässä taas ring kylä, missä yritetään vastustajalle vain yhtä tähteä hyökkäyksessä.
               </p>
-              <a href="../pictures/isompiring.png" class="btn btn-primary">Isompana</a>
+              <a href="../pictures/kuva2.jpg" class="btn btn-primary">Isompana</a>
             </div>
           </div>
         </div>
@@ -99,7 +99,7 @@ data-mdb-ride="carousel"
         <div class="col-lg-4 d-lg-block">
           <div class="card">
             <img
-              src="../pictures/war.jpg"
+              src="../pictures/kuva3.jpg"
               class="card-img-top"
               alt="war base."
             />
@@ -108,7 +108,7 @@ data-mdb-ride="carousel"
               <p class="card-text">
                 Tämä on sotaa varten kehitetty kylä, missä tarkoituksena on ettei vastustaja saisi kolmea tähteä.
               </p>
-              <a href="../pictures/isosota.png" class="btn btn-primary">Isompana</a>
+              <a href="../pictures/kuva3.jpg" class="btn btn-primary">Isompana</a>
             </div>
           </div>
         </div>
