--- a/pages/kuvagalleriaTh12.html
+++ b/pages/kuvagalleriaTh12.html
@@ -63,7 +63,7 @@ data-mdb-ride="carousel"
         <div class="col-lg-4">
           <div class="card">
             <img
-              src="../pictures/funny2.jpg"
+              src="../pictures/pic1.jpg"
               class="card-img-top"
               alt="Troll base."
             />
@@ -72,7 +72,7 @@ data-mdb-ride="carousel"
               <p class="card-text">
                 Tässä on niin kutsuttu hauska kylä, näitä löytyy netistä tuhansia erilaisia.
               </p>
-              <a href="../pictures/isompana.png" class="btn btn-primary">Isompana</a>
+              <a href="../pictures/pic1.jpg" class="btn btn-primary">Isompana</a>
             </div>
           </div>
         </div>
@@ -80,7 +80,7 @@ data-mdb-ride="carousel"
         <div class="col-lg-4 d-lg-block">
           <div class="card">
             <img
-              src="../pictures/trophy.jpg"
+              src="../pictures/pic2.jpg"
               class="card-img-top"
               alt="ring base."
             />
@@ -89,7 +89,7 @@ data-mdb-ride="carousel"
               <p class="card-text">
                 Tässä taas ring kylä, missä yritetään vastustajalle vain yhtä tähteä hyökkäyksessä.
               </p>
-              <a href="../pictures/isompiring.png" class="btn btn-primary">Isompana</a>
+              <a href="../pictures/pic2.jpg" class="btn btn-primary">Isompana</a>
             </div>
           </div>
         </div>
@@ -97,7 +97,7 @@ data-mdb-ride="carousel"
         <div class="col-lg-4 d-lg-block">
           <div class="card">
             <img
-              src="../pictures/war.jpg"
+              src="../pictures/pic3.jpg"
               class="card-img-top"
               alt="war base."
             />
@@ -106,7 +106,7 @@ data-mdb-ride="carousel"
               <p class="card-text">
                 Tämä on sotaa varten kehitetty kylä, missä tarkoituksena on ettei vastustaja saisi kolmea tähteä.
               </p>
-              <a href="../pictures/isosota.png" class="btn btn-primary">Isompana</a>
+              <a href="../pictures/pic3.jpg" class="btn btn-primary">Isompana</a>
             </div>
           </div>
         </div>
